// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tests renders the Tabs component 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="react-horizontal-scrolling-menu--wrapper border-base-lighter border-bottom margin-top-1"
    >
      <div
        class="react-horizontal-scrolling-menu--scroll-container"
      >
        <div
          class="react-horizontal-scrolling-menu--item"
          data-index="0"
          data-key="tab1"
        >
          <li
            aria-label="Active Dashboard Tab Tab 1"
            class="display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md border-base-dark border-x-0 border-top-0 border-bottom-05"
            style="cursor: pointer; white-space: nowrap;"
            tabindex="0"
          >
            Tab 1
          </li>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator"
          data-index="0.1"
          data-key="tab1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item"
          data-index="1"
          data-key="tab2"
        >
          <li
            aria-label="Dashboard Tab Tab 2"
            class="display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md"
            style="cursor: pointer; white-space: nowrap;"
            tabindex="0"
          >
            Tab 2
          </li>
        </div>
      </div>
    </div>
    <div
      class="tab-content"
    >
      Tab 1
    </div>
  </div>
</div>
`;

exports[`Tabs tests renders the Tabs component with default tab 2 selected 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="react-horizontal-scrolling-menu--wrapper border-base-lighter border-bottom margin-top-1"
    >
      <div
        class="react-horizontal-scrolling-menu--scroll-container"
      >
        <div
          class="react-horizontal-scrolling-menu--item"
          data-index="0"
          data-key="tab1"
        >
          <li
            aria-label="Dashboard Tab Tab 1"
            class="display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md"
            style="cursor: pointer; white-space: nowrap;"
            tabindex="0"
          >
            Tab 1
          </li>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator"
          data-index="0.1"
          data-key="tab1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item"
          data-index="1"
          data-key="tab2"
        >
          <li
            aria-label="Active Dashboard Tab Tab 2"
            class="display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md border-base-dark border-x-0 border-top-0 border-bottom-05"
            style="cursor: pointer; white-space: nowrap;"
            tabindex="0"
          >
            Tab 2
          </li>
        </div>
      </div>
    </div>
    <div
      class="tab-content"
    >
      Tab 2
    </div>
  </div>
</div>
`;
